# freestanding-rs

./: Cargo.toml  README.rst
src/: main.rs
